--- a/public/css/campaigns-and-announcements-section.css
+++ b/public/css/campaigns-and-announcements-section.css
@@ -37,7 +37,21 @@
     height: 45px;
     filter: drop-shadow(-4px 6.928203105926514px 30px rgba(134,139,149,0.15));
     margin-left: 50px;
+    background-color: #C0C0C0;
+    border-radius: 50%;
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
+    cursor: pointer; 
+    transition: background-color 0.3s ease; 
+
+    
+    &:hover {
+        background-color: #ACACAC; 
+        transform: scale(1.05); 
+    }
 }
+
 
 .campaigns-and-announcements-description {
     font-family: "DMSans-Bold";
